--- a/Chessboard/index.html
+++ b/Chessboard/index.html
@@ -37,27 +37,27 @@
 
         <tr class="rest-rows">
           <td class="first-last-col">8</td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
+          <td class="col-w">&#9820;</td>
+          <td class="col-b">&#9822;</td>
+          <td class="col-w">&#9821;</td>
+          <td class="col-b">&#9819;</td>
+          <td class="col-w">&#9818;</td>
+          <td class="col-b">&#9821;</td>
+          <td class="col-w">&#9822;</td>
+          <td class="col-b">&#9820;</td>
           <td class="first-last-col">8</td>
         </tr>
 
         <tr class="rest-rows">
           <td class="first-last-col">7</td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
+          <td class="col-b">&#9823;</td>
+          <td class="col-w">&#9823;</td>
+          <td class="col-b">&#9823;</td>
+          <td class="col-w">&#9823;</td>
+          <td class="col-b">&#9823;</td>
+          <td class="col-w">&#9823;</td>
+          <td class="col-b">&#9823;</td>
+          <td class="col-w">&#9823;</td>
           <td class="first-last-col">7</td>
         </tr>
 
@@ -115,27 +115,27 @@
 
         <tr class="rest-rows">
           <td class="first-last-col">2</td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
+          <td class="col-w">&#9817;</td>
+          <td class="col-b">&#9817;</td>
+          <td class="col-w">&#9817;</td>
+          <td class="col-b">&#9817;</td>
+          <td class="col-w">&#9817;</td>
+          <td class="col-b">&#9817;</td>
+          <td class="col-w">&#9817;</td>
+          <td class="col-b">&#9817;</td>
           <td class="first-last-col">2</td>
         </tr>
 
         <tr class="rest-rows">
           <td class="first-last-col">1</td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
+          <td class="col-b">&#9814;</td>
+          <td class="col-w">&#9816;</td>
+          <td class="col-b">&#9815;</td>
+          <td class="col-w">&#9813;</td>
+          <td class="col-b">&#9812;</td>
+          <td class="col-w">&#9815;</td>
+          <td class="col-b">&#9816;</td>
+          <td class="col-w">&#9814;</td>
           <td class="first-last-col">1</td>
         </tr>
 
@@ -152,17 +152,17 @@
           <td></td>
         </tr>
 
-          <tr height="50px" width="50px" bgcolor="white">
-            <td align="center"></td>
-            <td align="center"></td>
-            <td align="center"><i class="fa fa-backward"></i></td>
-            <td align="center"><i class="fa fa-step-backward"></i></td>
-            <td align="center"><i class="fa fa-play"></i></td>
-            <td align="center"><i class="fa fa-step-forward"></i></td>
-            <td align="center"><i class="fa fa-fast-forward"></i></td>
-            <td align="center"></td>
-            <td align="center"></td>
-            <td align="center"></td>
+          <tr class="button-row">
+            <td></td>
+            <td></td>
+            <td><i class="fa fa-backward"></i></td>
+            <td><i class="fa fa-step-backward"></i></td>
+            <td><i class="fa fa-play"></i></td>
+            <td><i class="fa fa-step-forward"></i></td>
+            <td><i class="fa fa-fast-forward"></i></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
 
