--- a/Chessboard/tests.html
+++ b/Chessboard/tests.html
@@ -11,13 +11,17 @@
   <script src="https://cdn.rawgit.com/Automattic/expect.js/0.3.1/index.js"></script>
   <script src="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.js"></script>
   <script src="node_modules/chai/chai.js" type="text/javascript"></script>
-  
+
   <script>mocha.setup('bdd')</script>
-  <script src="test.array.js"></script>
+  <!-- <script src="test.array.js"></script>
   <script src="test.object.js"></script>
-  <script src="test.xhr.js"></script>
+  <script src="test.xhr.js"></script> -->
+
+  <script src="node_modules/chai/chai.js"></script>
+  <script src="js/tests.js"></script>
+  <script src="js/main.js"></script>
   <script>
-    mocha.checkLeaks();
+    //mocha.checkLeaks();
     mocha.globals(['jQuery']);
     mocha.run();
   </script>
