--- a/Chessboard/index.html
+++ b/Chessboard/index.html
@@ -20,8 +20,29 @@
 
     <body>
 
-      <section id="container">
+      <main id="container">
         <h1>Chessboard showing the catalan opening</h1>
+
+        <article class="info">
+          <p>
+            The Catalan opening system is becoming one of the most popular setups for White in tournament play.
+            The Catalan derives its name from Catalonia, after tournament organisers at the 1929 Barcelona tournament asked Savielly Tartakower to create a new variation in homage to the area's chess history. It had been played a few times before Tartakower's usage in the tournament, however: Réti–Leonhardt, Berlin 1928, for instance, transposed into an Open Catalan.
+            The Catalan came to prominence at the top level when both Garry Kasparov and Viktor Korchnoi played it in their Candidates Semifinal match (part of the process to determine who would challenge world champion Anatoly Karpov for the title) in London in 1983: five games of the eleven-game match were Catalans.
+          </p>
+
+        </article>
+
+        <section class="table-nav">
+
+        <nav class="button-row">
+
+          <button class="reset">Reset</button>
+          <button class="prev">Prev</button>
+          <button class="play">Play</button>
+          <button class="next">Next</button>
+          <button class="end">End</button>
+
+        </nav>
 
       <table class="chessboard">
         <thead>
@@ -157,20 +178,15 @@
           <td></td>
         </tr>
       </tfoot>
-    </table>
 
-          <nav class="button-row">
-
-            <button><i class="fa fa-backward">Backward</i></button>
-            <button><i class="fa fa-step-backward">Step Backward</i></button>
-            <button><i class="fa fa-play">Play</i></button>
-            <button><i class="fa fa-step-forward">Step Forward</i></button>
-            <button><i class="fa fa-fast-forward">Forward</i></button>
-
-          </nav>
+        </section>
 
 
-    </section>
+
+
+      </table>
+
+    </main>
 
 
 
