adding pieces to view initial

--- a/Chessboard/index.html
+++ b/Chessboard/index.html
@@ -63,27 +63,27 @@
         <tbody>
         <tr class="rest-rows">
           <th class="first-last-col">8</th>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
+          <td class="col-w bRook"></td>
+          <td class="col-b bKnight"></td>
+          <td class="col-w bBishop"></td>
+          <td class="col-b bQueen"></td>
+          <td class="col-w bKing"></td>
+          <td class="col-b bBishop"></td>
+          <td class="col-w bKnight"></td>
+          <td class="col-b bRook"></td>
           <th class="first-last-col">8</th>
         </tr>
 
         <tr class="rest-rows">
           <th class="first-last-col">7</th>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
+          <td class="col-b bPawn"></td>
+          <td class="col-w bPawn"></td>
+          <td class="col-b bPawn"></td>
+          <td class="col-w bPawn"></td>
+          <td class="col-b bPawn"></td>
+          <td class="col-w bPawn"></td>
+          <td class="col-b bPawn"></td>
+          <td class="col-w bPawn"></td>
           <th class="first-last-col">7</th>
         </tr>
 
@@ -141,27 +141,27 @@
 
         <tr class="rest-rows">
           <th class="first-last-col">2</th>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
+          <td class="col-w wPawn"></td>
+          <td class="col-b wPawn"></td>
+          <td class="col-w wPawn"></td>
+          <td class="col-b wPawn"></td>
+          <td class="col-w wPawn"></td>
+          <td class="col-b wPawn"></td>
+          <td class="col-w wPawn"></td>
+          <td class="col-b wPawn"></td>
           <th class="first-last-col">2</th>
         </tr>
 
         <tr class="rest-rows">
           <th class="first-last-col">1</th>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
-          <td class="col-b"></td>
-          <td class="col-w"></td>
+          <td class="col-b wRook"></td>
+          <td class="col-w wKnight"></td>
+          <td class="col-b wBishop"></td>
+          <td class="col-w wQueen"></td>
+          <td class="col-b wKing"></td>
+          <td class="col-w wBishop"></td>
+          <td class="col-b wKnight"></td>
+          <td class="col-w wRook"></td>
           <th class="first-last-col">1</th>
         </tr>
       </tbody>
