--- a/Chessboard/index.html
+++ b/Chessboard/index.html
@@ -35,12 +35,11 @@
         <section class="table-nav">
 
         <nav class="button-row">
-
-          <button class="reset">Reset</button>
-          <button class="prev">Prev</button>
-          <button class="play">Play</button>
-          <button class="next">Next</button>
-          <button class="end">End</button>
+          <button class="reset"><i class="fa fa-undo"></i></button>
+          <button class="prev"><i class="fa fa-arrow-left"></i></button>
+          <!-- <button class="play"></button> -->
+          <button class="next"><i class="fa fa-arrow-right"></i></button>
+          <button class="end"><i class="fa fa-repeat"></i></button>
 
         </nav>
 
